modified:   README.md 	modified:   alnSeqSrc/20230908-alnSeq/Makefile 	deleted:    alnSeqSrc/README.md 	deleted:    alnSeqSrc/analysis/20230722-benchmarking/20230722-alnSeq-bench-stats.tsv 	deleted:    alnSeqSrc/analysis/20230722-benchmarking/20230722-alnSeq-benchmarking.r 	deleted:    alnSeqSrc/analysis/20230722-benchmarking/20230722-alnSeq-memory.svg 	deleted:    alnSeqSrc/analysis/20230722-benchmarking/20230722-alnSeqTime.svg 	deleted:    alnSeqSrc/analysis/20230722-benchmarking/20230722-benchAln.sh 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-alnSeq-bench-stats.tsv 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-alnSeq-benchmarking.r 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-alnSeq-memory.svg 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-alnSeq-time.svg 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-benchAln.sh 	deleted:    alnSeqSrc/analysis/20230811-benchmarking/20230811-bio-align-failed-runs.tsv 	deleted:    alnSeqSrc/analysis/20230827-benchmarking/20230827-alnSeq-bench-stats.tsv 	deleted:    alnSeqSrc/analysis/20230827-benchmarking/20230827-alnSeq-benchmarking.r 	deleted:    alnSeqSrc/analysis/20230827-benchmarking/20230827-alnSeq-memory.svg 	deleted:    alnSeqSrc/analysis/20230827-benchmarking/20230827-alnSeq-time.svg 	deleted:    alnSeqSrc/analysis/20230827-benchmarking/20230827-benchAln.sh 	deleted:    alnSeqSrc/analysis/20231022-benchmarking/20231022-alnSeq-bench-stats-clean.tsv 	deleted:    alnSeqSrc/analysis/20231022-benchmarking/20231022-alnSeq-bench-stats.tsv 	deleted:    alnSeqSrc/analysis/20231022-benchmarking/20231022-alnSeq-benchmarking.r 	deleted:    alnSeqSrc/analysis/20231022-benchmarking/20231022-benchAln.sh 	deleted:    alnSeqSrc/analysis/20231029-benchmark/20231029-alnSeqPy-CPU.svg 	deleted:    alnSeqSrc/analysis/20231029-benchmark/20231029-alnSeqPy-bench-stats.tsv 	deleted:    alnSeqSrc/analysis/20231029-benchmark/20231029-alnSeqPy-memory.svg 	deleted:  

--- a/alnSeqSrc/20230908-alnSeq/Makefile
+++ b/alnSeqSrc/20230908-alnSeq/Makefile
@@ -8,11 +8,11 @@ COREFLAGS=\
   -Wall\
   --std=c99 \
   -static\
-  -O3
-
+  -O3\
 # These are here for the user to overwrite
 #CFLAGS=-DBLANK
-CFLAGS=-DBLANK
+CFLAGS=-DDELINSSNP
+
 
 DEBUGFLAGS=\
    -DNOSEQCNVT\
